src/objects/Account_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Account_Objective_Client_Desired_Results__c</fullName>
        <label>Client Desired Results</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Account_Objective_Our_Impact__c</fullName>
        <label>Our Impact</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account Plan</description>
        <inlineHelpText>Account Plan</inlineHelpText>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>All_In_Drawn_Spread_LIBOR_Spread_Faci__c</fullName>
        <description>All-In Drawn Spread (LIBOR Spread + Facility Fee)</description>
        <inlineHelpText>All-In Drawn Spread (LIBOR Spread + Facility Fee)</inlineHelpText>
        <label>All-In Drawn Spread (LIBOR Spread + Faci</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <description>Annual Revenue</description>
        <inlineHelpText>Annual Revenue</inlineHelpText>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Outstanding__c</fullName>
        <description>Average Outstanding</description>
        <inlineHelpText>Average Outstanding</inlineHelpText>
        <label>Average Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commitment_Amount__c</fullName>
        <description>Commitment Amount</description>
        <inlineHelpText>Commitment Amount</inlineHelpText>
        <label>Commitment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Since__c</fullName>
        <formula>YEAR(Account__r.Date_of_Activation__c)</formula>
        <label>Customer Since</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discussed_with_client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discussed with client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Execution_What_we_Know__c</fullName>
        <label>What we Know</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Execution_What_we_Need_to_Know__c</fullName>
        <label>What We Need to Know</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Obstacles_What_We_Know__c</fullName>
        <label>What We Know</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Obstacles_What_we_Need_to_Know__c</fullName>
        <label>What We Need to Know</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opty_What_we_Know__c</fullName>
        <label>What we Know</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opty_What_we_Need_to_Know__c</fullName>
        <label>What We Need to Know</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PD__c</fullName>
        <description>PD</description>
        <label>PD</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROEC_Return_on_Economic_Capital__c</fullName>
        <description>ROEC (Return on Economic Capital)</description>
        <inlineHelpText>ROEC (Return on Economic Capital)</inlineHelpText>
        <label>ROEC (Return on Economic Capital)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RORC_Return_on_Regulatory_Capital__c</fullName>
        <description>RORC (Return on Regulatory Capital)</description>
        <inlineHelpText>RORC (Return on Regulatory Capital)</inlineHelpText>
        <label>RORC (Return on Regulatory Capital)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Results_What_we_Need_to_Know__c</fullName>
        <description>What we Need to Know(Results)</description>
        <inlineHelpText>What we Need to Know(Results)</inlineHelpText>
        <label>What We Need to Know</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Results_What_we_know__c</fullName>
        <description>What we know (Results)</description>
        <inlineHelpText>What we know (Results)</inlineHelpText>
        <label>What We know</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_are_the_key_points_the_value_alignm__c</fullName>
        <description>What are the key points the value alignment tells us?</description>
        <inlineHelpText>What are the key points the value alignment tells us?</inlineHelpText>
        <label>Key Points</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>Account Plan</label>
    <nameField>
        <label>Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>